appId: https://www.saucedemo.com
---
- launchApp
- tapOn: "Username"
- inputText: "locked_out_user"
- tapOn: "Password"
- inputText: "secret_sauce"
- tapOn: "Login"
- assertVisible: "locked out"