appId: https://www.saucedemo.com
---
- launchApp
- tapOn: "Username"
- inputText: "usuario_invalido"
- tapOn: "Password"
- inputText: "senha_errada"
- tapOn: "Login"
- assertVisible: "Epic sadface"